--- a/src/dcaa_pos_/Inventory_.fxml
+++ b/src/dcaa_pos_/Inventory_.fxml
@@ -3,7 +3,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -22,14 +24,22 @@
         <columns>
           <TableColumn fx:id="Item_id" prefWidth="129.0" text="Item ID" />
           <TableColumn fx:id="item_name" prefWidth="177.0" text="Item Name" />
-            <TableColumn fx:id="Description" prefWidth="235.0" text="Description" />
-            <TableColumn fx:id="price" prefWidth="97.0" text="Price" />
-            <TableColumn fx:id="Item_type" minWidth="0.0" prefWidth="129.0" text="Item Type" />
+            <TableColumn fx:id="Description" prefWidth="135.0" text="Description" />
+            <TableColumn fx:id="price" prefWidth="102.0" text="Price" />
+            <TableColumn fx:id="Cost" prefWidth="105.0" text="Cost" />
+            <TableColumn fx:id="Item_type" minWidth="0.0" prefWidth="115.0" text="Item Type" />
         </columns>
+         <contextMenu>
+            <ContextMenu>
+              <items>
+                <MenuItem fx:id="MenuItemUpdate" mnemonicParsing="false" onAction="#UPDATE_ITEM" text="Update" />
+              </items>
+            </ContextMenu>
+         </contextMenu>
       </TableView>
       <ButtonBar layoutX="-4.0" layoutY="579.0" prefHeight="70.0" prefWidth="1001.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="579.0">
         <buttons>
-          <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="121.0" text="Update">
+          <Button fx:id="refresh" mnemonicParsing="false" onAction="#loaddata" prefHeight="40.0" prefWidth="121.0" text="Refresh">
                <font>
                   <Font size="15.0" />
                </font>
@@ -56,11 +66,10 @@
             <Font size="15.0" />
          </font>
       </Label>
-      <ComboBox layoutX="651.0" layoutY="21.0" prefHeight="25.0" prefWidth="113.0" AnchorPane.leftAnchor="651.0" AnchorPane.rightAnchor="237.0" AnchorPane.topAnchor="21.0" />
-      <TextField layoutX="771.0" layoutY="21.0" prefHeight="25.0" prefWidth="216.0" AnchorPane.leftAnchor="771.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="21.0" />
+      <ComboBox fx:id="combo" layoutX="651.0" layoutY="21.0" prefHeight="25.0" prefWidth="113.0" AnchorPane.leftAnchor="651.0" AnchorPane.rightAnchor="237.0" AnchorPane.topAnchor="21.0" />
+      <TextField fx:id="Search" layoutX="771.0" layoutY="21.0" onAction="#Search_Itrm" prefHeight="25.0" prefWidth="216.0" AnchorPane.leftAnchor="771.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="21.0" />
       <VBox layoutX="14.0" layoutY="55.0" prefHeight="531.0" prefWidth="195.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="792.0" AnchorPane.topAnchor="55.0">
          <children>
-            <Button mnemonicParsing="false" prefHeight="85.0" prefWidth="195.0" text="SALES" />
             <Button fx:id="Item_type_List" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#On_Item_ltype" prefHeight="85.0" prefWidth="195.0" text="ITEM TYPES" />
             <Button fx:id="Item_type_List1" mnemonicParsing="false" onAction="#POSMain_" prefHeight="85.0" prefWidth="195.0" text="POS Main" />
             <Button fx:id="Shortcut_settings" layoutX="10.0" layoutY="180.0" mnemonicParsing="false" onAction="#ShortcutSetting" prefHeight="85.0" prefWidth="195.0" text="Short Cut Settings" />
